--- a/TravelTripProje/Views/Default/Partial3.cshtml
+++ b/TravelTripProje/Views/Default/Partial3.cshtml
@@ -2,11 +2,11 @@
 @model List<Blog>
 
 <div class="padding">
-    <h4>En Popüler 10 Blog</h4>
+    <h4>Son 10 Blog</h4>
     <ul class="list list-pad">
         @{ int i = 0;}
 
-        @foreach (var x in Model)
+        @foreach (var x in Model.OrderByDescending(x => x.Id).Take(10))
         {
             <li class="list-bg"><span>@{i++;
             } @i</span><a href="/Blog/BlogDetay/@x.Id">@x.Baslik</a></li>
