--- a/TravelTripProje/Views/Blog/Index.cshtml
+++ b/TravelTripProje/Views/Blog/Index.cshtml
@@ -4,41 +4,66 @@
     Layout = "~/Views/Shared/_TestLayout.cshtml";
 }
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-
-    <link href="~/personal_blog-web/web/css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link href="~/personal_blog-web/web/css/style.css" rel='stylesheet' type='text/css' />
+    <link href="~/personal_blog-web/web/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/personal_blog-web/web/css/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Personal Blog Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!----webfonts---->
-    <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-    <!----//webfonts---->
+    <meta charset="utf-8" />
+
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' />
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' />
+
+    <!-- Stil -->
+    <style>
+        .side-content h3 {
+            border-bottom: 2px solid #a1034d;
+            padding-bottom: 5px;
+            margin-bottom: 15px;
+            color: #333;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .side-content ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .side-content ul li {
+            background-color: #f9f9f9;
+            margin-bottom: 8px;
+            padding: 8px 12px;
+            border-radius: 6px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            transition: background-color 0.3s ease;
+        }
+
+        .side-content ul li a {
+            text-decoration: none;
+            color: #444;
+            font-size: 14px;
+        }
+
+        .side-content ul li:hover {
+            background-color: #f0e0eb;
+        }
+    </style>
 </head>
 <body>
-    <!---header---->
+    <!-- Header -->
     <div class="header">
         <div class="container">
-
             <div class="clearfix"></div>
-
-            <!---//End-top-nav---->
         </div>
     </div>
-    <!--/header-->
+
+    <!-- İçerik -->
     <div class="single">
         <div class="container">
+            <!-- Ana Blog İçeriği -->
             <div class="col-md-8 single-main">
                 @foreach (var x in Model.Deger1)
                 {
@@ -52,33 +77,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a href="/Blog/BlogDetay/@x.Id">devamını oku</a>
                         </p>
                     </div>
-                    <br /> <br />
+                    <br /><br />
                 }
-                <br /> <br />
             </div>
 
+            <!-- Sağ Panel -->
             <div class="col-md-4 side-content">
+                <!-- Son Bloglar -->
                 <div class="recent">
                     <h3>Son Bloglar</h3>
-                    @foreach (var z in Model.Deger3)
-                    {
-                        <ul>
+                    <ul>
+                        @foreach (var z in Model.Deger3)
+                        {
                             <li><a href="/Blog/BlogDetay/@z.Id">@z.Baslik</a></li>
-
-                        </ul>
-                    }
+                        }
+                    </ul>
                 </div>
+
+                <!-- Son Yorumlar -->
                 <div class="comments">
                     <h3>Son Yorumlar</h3>
                     <ul>
-                        <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
-                        <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
-                        <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
+                        @foreach (var y in Model.Deger4)
+                        {
+                            <li><a href="#">@y.Yorum</a></li>
+                        }
                     </ul>
                 </div>
-                
+
                 <div class="clearfix"></div>
             </div>
+
             <div class="clearfix"></div>
         </div>
     </div>
