Admin Hakkımızda - İletisim sayfaları eklendi.

--- a/TravelTripProje/Views/Admin/Index.cshtml
+++ b/TravelTripProje/Views/Admin/Index.cshtml
@@ -38,7 +38,7 @@
             <td><a href="/Admin/BlogSil/@x.Id" class="btn btn-danger">Sil</a></td>
             <td><a href="/Admin/BlogGetir/@x.Id" class="btn btn-warning">Güncelle</a></td>
             <td>
-                <a href="#" class="btn" style="background-color: #cfcfcf; color: black;">Detaylar</a>
+                <a href="/Blog/BlogDetay/@x.Id" class="btn" style="background-color: #cfcfcf; color: black;">Detaylar</a>
             </td>
         </tr>
     }
