--- a/TravelTripProje/Views/Shared/_AdminLayout.cshtml
+++ b/TravelTripProje/Views/Shared/_AdminLayout.cshtml
@@ -18,8 +18,10 @@
         <h3 class="w3-bar-item">Menüler</h3>
         <a href="/Admin/Index/" class="w3-bar-item w3-button">Bloglar</a>
         <a href="/Admin/YorumlarListesi/" class="w3-bar-item w3-button">Yorumlar</a>
-        <a href="/Admin/iletisim/" class="w3-bar-item w3-button">İletişim</a>
-        <a href="/Admin/hakkimizda/" class="w3-bar-item w3-button">Hakkımızda</a>
+        <a href="/Admin/IletisimListesi/" class="w3-bar-item w3-button">İletişim</a>
+
+        <a href="/Admin/HakkimizdaListesi/" class="w3-bar-item w3-button">Hakkımızda</a>
+
         <a href="/Default/Index/" class="w3-bar-item w3-button">Siteye Git</a>
         <a href="/GirisYap/LogOut/" class="w3-bar-item w3-button">Çıkış Yap</a>
     </div>
